Wrong evaluation of Action Constraint #39207

Closed
opened 2014-03-15 23:46:40 +01:00 by Juan Pablo Bouza · 37 comments

hash: 2aff243

action_bug.blend

I've uploaded a sample blend file.

The action constraint evaluated in the scale transform is giving wrong results.

As you will see in the blend file, bone_3 has and action constraint that is triggered with bone_2 Y scale in local space.

If you rotate or scale Bone_2, you'll notice that the action is triggered randomly. Even if you rotate or scale Bone_1, which is the parent of Bone_2, action will be strangely triggered. Location transforms does not seem to trigger the constraint.

hash: 2aff243 [action_bug.blend](https://archive.blender.org/developer/F81315/action_bug.blend) I've uploaded a sample blend file. The action constraint evaluated in the scale transform is giving wrong results. As you will see in the blend file, bone_3 has and action constraint that is triggered with bone_2 Y scale in local space. If you rotate or scale Bone_2, you'll notice that the action is triggered randomly. Even if you rotate or scale Bone_1, which is the parent of Bone_2, action will be strangely triggered. Location transforms does not seem to trigger the constraint.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @jpbouza-4

Added subscriber: @jpbouza-4

#40332 was marked as duplicate of this issue

#40332 was marked as duplicate of this issue

Added subscriber: @mont29

Added subscriber: @mont29

Nah, the action is triggered correctly. The issue is that, near Y-scale 1.0 of bone 2, there is a strange glitch that sort of mirror bone 3 along its Y axis…

Nah, the action is triggered correctly. The issue is that, near Y-scale 1.0 of bone 2, there is a strange glitch that sort of mirror bone 3 along its Y axis…

Added subscriber: @BeornLeonard

Added subscriber: @BeornLeonard

I'm having the same problem. It seems there is something quite wrong with how blender assesses drivers at the moment.
I've attached a comparative screenshot showing the same file in Blender 2.70 (211f08d) and Blender 2.69.
In this case it's not an action constraint, but a shape key driven by the Y scale of a bone.
driver_bug.jpg

BTW, I tested jpbouza's file in 2.69 and the bug isn't present.
I also just rebuilt Blender and can confirm that the bug is still present in eaf387b. Also the bug shows up in renders.
This is a major problem and means that the current version of Blender is not production ready for riggers and animators.

I'm having the same problem. It seems there is something quite wrong with how blender assesses drivers at the moment. I've attached a comparative screenshot showing the same file in Blender 2.70 (211f08d) and Blender 2.69. In this case it's not an action constraint, but a shape key driven by the Y scale of a bone. ![driver_bug.jpg](https://archive.blender.org/developer/F81693/driver_bug.jpg) BTW, I tested jpbouza's file in 2.69 and the bug isn't present. I also just rebuilt Blender and can confirm that the bug is still present in eaf387b. Also the bug shows up in renders. This is a major problem and means that the current version of Blender is not production ready for riggers and animators.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

note: when scaling Bone_2 in action_bug.blend I get an assert fcurve_eval_keyframes(), at 'a > 0'

also @BeornLeonard - could you upload this file with the driver issue?

note: when scaling `Bone_2` in `action_bug.blend` I get an assert `fcurve_eval_keyframes(), at 'a > 0'` also @BeornLeonard - could you upload this file with the driver issue?
Joshua Leung self-assigned this 2014-03-18 11:03:40 +01:00

Ok... excuse the size (it's 3.4Mb)

Clive.blend

If you open the attached file in 2.69 and 2.70 you can see the bug quite clearly.

Ok... excuse the size (it's 3.4Mb) [Clive.blend](https://archive.blender.org/developer/F81702/Clive.blend) If you open the attached file in 2.69 and 2.70 you can see the bug quite clearly.

@jpbouza-4 - the bug is caused by the assert,

looks like this but isnt in 2.70rc2 and wont effect the release. (removing from Blender2.70 project)

@jpbouza-4 - the bug is caused by the `assert`, looks like this but isnt in 2.70rc2 and wont effect the release. (removing from Blender2.70 project)
Member

Alright, let's firstly clarify the situation here a bit first:

  • This issue does not affect 2.70 (I'm specifically referring to the RC's and the release which is pending but hasn't quite landed yet)
  • 2aff243 is perhaps the only commit that has introduced changes in this area - indeed, that's exactly the revision that @jpbouza-4 noted (though I'm not sure whether that was by chance :)
  • The assert that campbell noted is in fact something I put in during the commit to help look out for situations where it looked like it probably would fail, but I couldn't confirm yet whether it would in practice (from the look of things, it looks like it does fail on a good number of files in the wild!)
Alright, let's firstly clarify the situation here a bit first: - This issue does not affect 2.70 (I'm specifically referring to the RC's and the release which is pending but hasn't quite landed yet) - 2aff243 is perhaps the only commit that has introduced changes in this area - indeed, that's exactly the revision that @jpbouza-4 noted (though I'm not sure whether that was by chance :) - The assert that campbell noted is in fact something I put in during the commit to help look out for situations where it looked like it probably would fail, but I couldn't confirm yet whether it would in practice (from the look of things, it looks like it does fail on a good number of files in the wild!)

I just checked my file in 2.70 RC2 and can confirm the bug isn't there.
Not sure how the RCs work, but the last build where I saw the bug was eaf387b, which I downloaded and built as I posted my first comment.

I just checked my file in 2.70 RC2 and can confirm the bug isn't there. Not sure how the RCs work, but the last build where I saw the bug was eaf387b, which I downloaded and built as I posted my first comment.

This issue was referenced by blender/blender-addons-contrib@f0ac7294fa

This issue was referenced by blender/blender-addons-contrib@f0ac7294fafcd12abc83aa706f41af909ddad96d

This issue was referenced by f0ac7294fa

This issue was referenced by f0ac7294fafcd12abc83aa706f41af909ddad96d
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit f0ac7294fa.

Closed by commit f0ac7294fa.
Member

I've made a few fixes which resolve the issues seen in the test files here. Please check on other files whether these issues still occur (in 22ab652 onwards).

If there ARE still any issues, run Blender in debug mode (./blender -d) and paste the output here along with the offending file(s). I've left in some debug prints for now to help generate some diagnostics if this goes wrong still :)

I've made a few fixes which resolve the issues seen in the test files here. Please check on other files whether these issues still occur (in 22ab652 onwards). If there ARE still any issues, run Blender in debug mode (./blender -d) and paste the output here along with the offending file(s). I've left in some debug prints for now to help generate some diagnostics if this goes wrong still :)

Added subscriber: @GabrielCaraballo

Added subscriber: @GabrielCaraballo

Works for me. Thanks aligorith!

Works for me. Thanks aligorith!
Author
Member

Yep, seems to be working for actions too! :)

Yep, seems to be working for actions too! :)
Author
Member

Mmmmmm ok... I don't quite get how this hash thing works yet...

I downloaded c17acf1 19 Mar 5:02 - the issue was solved

But in d2660a0 19 Mar 12:20 - the issue is present again!

How come?

Mmmmmm ok... I don't quite get how this hash thing works yet... I downloaded c17acf1 19 Mar 5:02 - the issue was solved But in d2660a0 19 Mar 12:20 - the issue is present again! How come?

Mmmh… not sure about what you mean with "downloaded"… ;)

If you are unsure, best thing is probably to wait tomorrow and test this night's builds from http://builder.blender.org/download :)

Mmmh… not sure about what you mean with "downloaded"… ;) If you are unsure, best thing is probably to wait tomorrow and test this night's builds from http://builder.blender.org/download :)
Author
Member

Ok ok, I'm almost sure that I downloaded both builds from there... but we'll wait then...

Ok ok, I'm almost sure that I downloaded both builds from there... but we'll wait then...
Author
Member

Oh boy... I still see the bug in 2.7 official... It seems fixed in the sample file I uploaded, but it is not fixed in my complex rigs.... I'll try to debug the rig a bit and see when it happens...

Oh boy... I still see the bug in 2.7 official... It seems fixed in the sample file I uploaded, but it is not fixed in my complex rigs.... I'll try to debug the rig a bit and see when it happens...
Author
Member

action_bug_2.blend

Ok, my mistake, it's not in official 2.7 (I should start compiling again instead of getting messed up with the buildbot :s )

in aee3018, the issue effect of the issue seems to have changed a bit but it is still there. I'm attaching a new sample file where I tried to narrow a bit the problem

_ The bug seems to happen only when there are scale keys in the action.

_ It seems to happen only when there is more than 2 keys

_The issue also depends on the values of the min and max fields in the action constraint. Change those numbers and you'll see that with some combinations the bug disappears.

Hope this helps!

[action_bug_2.blend](https://archive.blender.org/developer/F81947/action_bug_2.blend) Ok, my mistake, it's not in official 2.7 (I should start compiling again instead of getting messed up with the buildbot :s ) in aee3018, the issue effect of the issue seems to have changed a bit but it is still there. I'm attaching a new sample file where I tried to narrow a bit the problem _ The bug seems to happen only when there are scale keys in the action. _ It seems to happen only when there is more than 2 keys _The issue also depends on the values of the min and max fields in the action constraint. Change those numbers and you'll see that with some combinations the bug disappears. Hope this helps!
Member

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Member

Damn... Reopening this bug report. Now we have another failure where it seems that for whatever reason the curve doesn't get evaluated correctly a fraction past the keyframes at 1.0.

See attached image:
action_bug_2.png

Damn... Reopening this bug report. Now we have another failure where it seems that for whatever reason the curve doesn't get evaluated correctly a fraction past the keyframes at 1.0. See attached image: ![action_bug_2.png](https://archive.blender.org/developer/F82007/action_bug_2.png)

This issue was referenced by blender/blender-addons-contrib@3406ef8e03

This issue was referenced by blender/blender-addons-contrib@3406ef8e033a333b47820fb14cfe4d91b1bdd5de

This issue was referenced by 3406ef8e03

This issue was referenced by 3406ef8e033a333b47820fb14cfe4d91b1bdd5de
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 3406ef8e03.

Closed by commit 3406ef8e03.
Member

Hopefully things are better now. This time, if there are still issues, it should be just a matter of tweaking a threshold until things start behaving nicely. Hopefully that won't be needed, as increasing that threshold decreases how fine grained you can make your custom fcurves (as it affects the minimum distance between keyframes where they will still be considered different).

Hopefully things are better now. This time, if there are still issues, it should be just a matter of tweaking a threshold until things start behaving nicely. Hopefully that won't be needed, as increasing that threshold decreases how fine grained you can make your custom fcurves (as it affects the minimum distance between keyframes where they will still be considered different).
Author
Member

I've made up my mind and started compiling blender again, hehe.

Problem solved Aligorith!

I've made up my mind and started compiling blender again, hehe. Problem solved Aligorith!
Member

Added subscribers: @MarioSottile, @JoshuaLeung

Added subscribers: @MarioSottile, @JoshuaLeung
Member

◀ Merged tasks: #40332.

◀ Merged tasks: #40332.

From #40332 (nothing new, only a screenshot)

Captura_de_pantalla_de_2014-05-24_09:59:39.png

From #40332 (nothing new, only a screenshot) ![Captura_de_pantalla_de_2014-05-24_09:59:39.png](https://archive.blender.org/developer/F90587/Captura_de_pantalla_de_2014-05-24_09_59_39.png)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39207
No description provided.